--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-R">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>點點圍三角</title> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>點點圍三角加入更智能電腦</title> <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <h1>點點圍三角</h1>
+    <h1>點點圍三角加入更智能電腦</h1>
     <p class="subtitle">連點成線、圍出三角。支援與朋友或電腦對戰！</p>
 
     <div id="game-container">
